# NTNU-Lectures

./: .gitignore  README.md  lectureProlog.py  renpyTest.js
CharacterGen/: character_cut.py  characterpacker.py  prof_jb_0.plist  prof_jb_1.plist
Docker/: Dockerfile  run-jupyter  run-jupyter.bat
html/: fira.css  index_scene.html  index_template.html  ntnu.js  ntnuerc.css
jblecture/: __init__.py  lectureProlog.py  pyproject.toml  reveal2mg.py
jblecture/jbcd/: __init__.py
jblecture/jbdata/: __init__.py
jblecture/jbdocument/: __init__.py
jblecture/jbgithub/: __init__.py
jblecture/jbmagics/: __init__.py
jblecture/jbslide/: __init__.py
jblecture/lserver/: __init__.py
jblecture/reveal2mg/: renpy.peg  renpyTest.js  renpy_grammar.peg  renpy_grammar_actions.py
jblecture/tests/: test_jblectures.py
jblectures/: __init__.py  jblectures.py  pyproject.toml
jblectures/cd/: __init__.py
jblectures/jbdata/: __init__.py
jblectures/jbdocument/: __init__.py
jblectures/jbmagics/: __init__.py
jblectures/jbslide/: __init__.py
jblectures/tests/: test_jblectures.py
